# scotti

./: .gitignore  Anchor.toml  Cargo.toml  H6-DUAL-ASSET-SPEC.md  HOUSE-SPEC.md  README.md  REDTEAM.md  SCALE.md
app/: .env.example  .env.local.example  .gitignore  README.md  _dualspin-harness.ts  _vault2-live.ts  _vault3-live.ts  harness.html  index.html  package-lock.json  package.json  vite.config.ts
app/scripts/: gen-bg-photo.mjs  gen-bg.mjs  gen-sky.mjs
app/src/: harness.tsx  main.tsx  theme.css  vite-env.d.ts
app/src/components/: Banner.tsx  FrescoBg.tsx  Indexed.tsx  Layout.tsx  SessionProvider.tsx  SessionWidget.tsx  Verify.tsx  ui.tsx
app/src/components/os/: StaleChip.tsx  SysBar.tsx  Window.tsx  controls.tsx  index.ts
app/src/lib/: aggregator.ts  artifacts.ts  clmm.ts  constants.ts  dashboard.ts  dividend.ts  dual.ts  dualspin.ts  dualstatus.ts  format.ts  hooks.ts  housemath.ts  indexer.ts  pollstore.ts  poolset.ts  program.ts  rpc.ts  session.ts  spin.ts  status.ts  vaultspec.ts  verify.ts
app/src/pages/: Docs.tsx  DualLpPanel.tsx  DualMachine.tsx  Fair.tsx  Floor.tsx  Launch.tsx  Lp.tsx  LpDashboard.tsx  Machine.tsx
app/src/theme/: tokens.css
app/test/: pollstore.test.ts
crates/house-math/: Cargo.toml
crates/house-math/proofs/: tick_price_crosscheck.py
crates/house-math/src/: aggregator.rs  clmm.rs  dividend.rs  lib.rs  margin.rs  payout.rs  price.rs  snapshot.rs  twap.rs
indexer/: .env.example  package-lock.json  package.json  tsconfig.json
indexer/src/: chain.ts  cli.ts  config.ts  db.ts  dual-decode.ts  ingest.ts  parse.ts  recompute.ts  reuse.ts  server.ts  shareprice.ts
indexer/test/: capture.ts  parse.test.ts  recompute.test.ts  redteam.test.ts  shareprice.test.ts  util.ts
indexer/test/fixtures/: dual-aged.json  dual-win.json  single-jackpot.json  single-loss.json  single-win.json
indexer/tools/: capture.ts
programs/house/: Cargo.toml
programs/house/src/: lib.rs
programs/house/tests/: test_dual.rs  test_house.rs  test_mock_gate.rs
scripts/: README.md  bootstrap-machines.ts  clmm-swap.ts  common.ts  create-clmm-pool.ts  create-machine.ts  devnet-b5-spin.ts  devnet-compound.ts  devnet-dual-spin.ts  devnet-pool-b5.ts  devnet-spin.ts  devnet-withdraw.ts  fix1-live-withdraw.ts  init-config.ts  keeper.ts  layouts.ts  machine-status.ts  machines.ts  package-lock.json  package.json  prove-layouts-with-swaps.ts  raydium-constants.ts  scale2-live-orderproof.ts  seed-clmm-lp.ts  seed-lp.ts  twap-demo-output.txt  twap-demo.ts  twap-status.ts  twap.ts  vault1-live-proof.ts  verify-layouts.ts  verify-spin.ts
scripts/spins/: 2FMmYdbYNCehjsfoSka53cvAzBWyK7uFcwZ56m3T1Yw4KpqVqRwGVkYTtVShsTrUvNjNLQciwsZvKBDZbDgHR1XT.json  2pxdF6FNLw1H9po6tcUs6REDT6LWifVPDxcD4MTcGvFL6jAJ7tKRYji48WPe65eBPvGP17abbFVHzeZvtf1owP3d.json  3PN2YBiPYHG76Uc6J4gzqbn7PJn5M9BLXZ1A89kwBZvEuM5DVAkxwRvBwCfZmag6wNfpykeBN9XDFRiYMF1v8jQ6.json  5iTjDBA5xbenK7RTSaiMPLQLitNpmkJWPsJT6EtJUCeAHZAr4zjeTsPp4562hDFN3XAub42j9KJFow1ew5NoDnbV.json
