[package]
name = "house"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "house"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
# Compiles the MockRandomness account + mock_fill_randomness instruction and
# the mock implementation of the randomness seam. NON-DEFAULT and OFF in the
# deployable build: a fillable randomness account is a drain-everything
# backdoor. Enabled only for LiteSVM tests (`cargo build-sbf --features
# mock-randomness` + `cargo test -p house --features mock-randomness`).
mock-randomness = []

[dependencies]
anchor-lang = { version = "1.0.1", features = ["init-if-needed"] }
yvone-house-math = { path = "../../crates/house-math" }

[dev-dependencies]
yvone-house-math = { path = "../../crates/house-math" }
litesvm = "0.10.0"
serde_json = "1"
solana-account = "3.0.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
