[package]
name = "house"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "house"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
# Compiles the MockRandomness account + mock_fill_randomness instruction and
# the mock implementation of the randomness seam. NON-DEFAULT and OFF in the
# deployable build: a fillable randomness account is a drain-everything
# backdoor. Enabled only for LiteSVM tests (`cargo build-sbf --features
# mock-randomness` + `cargo test -p house --features mock-randomness`).
mock-randomness = []
# Compiles the MockPrice account + mock_set_price instruction and the mock
# implementation of the price seam (H6b-1). Same posture as mock-randomness: a
# settable price account is a mint-arbitrary-payout backdoor, so it is OFF in the
# deployable build and enabled ONLY for LiteSVM tests. The default build gets the
# `clmm` price backend (Raydium ObservationState parsing; stubbed until H6b-3).
mock-price = []
# Swaps compound_epoch's ONE AMM CPI for a mock fill (at the read price, from a
# caller-supplied counterparty) so the compound ACCOUNTING is testable in LiteSVM,
# which has no Raydium program. OFF in the deployable build — that gets the real
# Raydium CLMM swap CPI. compound_epoch itself is present in both builds (the
# feature only swaps the internal fill), so nothing mock reaches the IDL.
mock-swap = []

[dependencies]
anchor-lang = { version = "1.0.1", features = ["init-if-needed"] }
# Token vault CPI (transfer) + ATA creation for dual-asset machines (H6b-1).
anchor-spl = "1.0.1"
yvone-house-math = { path = "../../crates/house-math" }
# On-chain only: RandomnessAccountData parsing. default-features off drops the
# solana-v2 path and the client crates (solana-sdk/client/account-decoder);
# solana-v3 matches our Agave-3.x tree, anchor-lang for the account reader.
switchboard-on-demand = { version = "0.13.0", default-features = false, features = ["solana-v3", "anchor-lang"] }
# switchboard-on-demand hard-depends on switchboard-protos, which drags getrandom
# 0.2 into the normal tree with its default OS backend — unsupported on the
# Solana (sbf) target. The `custom` feature swaps in a registrable backend so it
# compiles; on-chain code never calls it (it lives only in switchboard's client
# path), so no handler is registered. Standard Solana-program workaround.
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
yvone-house-math = { path = "../../crates/house-math" }
litesvm = "0.10.0"
serde_json = "1"
solana-account = "3.0.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
